--- a/src/component/Modal.css
+++ b/src/component/Modal.css
@@ -222,7 +222,7 @@
   height: 100vh;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 650px) {
 
   .modal-card-container {
     width: 100%;
